[project]
name = "reports"
description = "reports"
readme = "README.md"
authors = [{name = "OpenSAFELY", email = "tech@opensafely.org"}]
license = {file = "LICENSE"}
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
requires-python = ">=3.12"

[tool.coverage.run]
branch = true
dynamic_context = "test_function"
omit = [
  ".direnv/*",
  ".venv/*",
  "reports/asgi.py",
  "reports/settings.py",
  "reports/wsgi.py",
  "services/sentry.py",
  "gateway/migrations/*",
  "reports/migrations/*",
  "manage.py",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true

[tool.coverage.html]
show_contexts = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "reports.settings"
env = [
  "SECRET_KEY=12345",
  "REQUESTS_CACHE_NAME=test_cache",
  "ASSETS_DEV_MODE=True",
]
filterwarnings = [
    "ignore:distutils Version classes are deprecated:DeprecationWarning:marshmallow",
    "ignore:distutils Version classes are deprecated:DeprecationWarning:pytest_freezegun",
]

[tool.ruff]
line-length = 88
exclude = [
  ".direnv",
  ".git",
  ".github",
  ".ipynb_checkpoints",
  ".pytest_cache",
  ".venv",
  "__pycache__",
  "docker",
  "htmlcov",
  "venv",
]
lint.extend-select = [
  "A",  # flake8-builtins
  "I",  # isort
  "INP",  # flake8-no-pep420
  "ISC",  # flake8-implicit-str-concat
  "UP",  # pyupgrade
  "W",  # pycodestyle warning
]
lint.extend-ignore = [
  "A005", # ignore stdlib-module-shadowing. Would need to re-name services.logging.
  "E501", # ignore line-length. We judge case-by-case.
]

[tool.ruff.lint.isort]
lines-after-imports = 2
